--- a/JosiasPortifolio/style.css
+++ b/JosiasPortifolio/style.css
@@ -1,17 +1,56 @@
+body {
+  padding: 3%;
+}
+
 .name-font {
-    font-style: italic;
-    font-size: 20px;
-  }
+  font-style: italic;
+  font-size: 20px;
+  text-align: center;
+}
 
-  .qualidades_font {
-    font-style: unset;
-    font-weight: 600;
-  }
+.qualidades_font {
+  font-style: unset;
+  font-weight: 600;
+}
 
-  body {
-    background-color:#4c956c;
-  }
-  p{
-    font-family: 'Lato', sans-serif;
-    font-size: 20px;
-  }
+.descricao{
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  position: absolute;
+  top: 20%;
+  right: 8%;
+  text-align: center;
+}
+body {
+  background-color: white;
+}
+
+p {
+  font-family: 'Lato', sans-serif;
+  font-size: 20px;
+}
+
+h4 {
+  font-family: 'Lato', sans-serif;
+  font-size: 25px;
+  background-color: rgb(187, 93, 93);
+}
+
+ul {
+  font-family: 'Lato', sans-serif;
+  font-size: 20px;
+}
+
+#minha-foto {
+  float: left;
+  height: 280px;
+  padding: 10px;
+  background-color: rgb(99, 37, 156);
+  width: 280px;
+}
+
+.image-container {
+  height: 300px;
+}
+ul.qualidades_font li:nth-child(odd) {
+  background-color: aquamarine;
+}
